some overflow fixes

--- a/src/styles/common/common.scss
+++ b/src/styles/common/common.scss
@@ -2,6 +2,7 @@
   -webkit-padding-start: 0px;
   font-size: pxRem(16px);
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 input, textarea, button {
